2002-10-22  Dominik Vogt  <dominik.vogt@gmx.de>

	* libs/Colorset.c:
	* fvwm/menustyle.c:
	* libs/Colorset.h:
	* libs/Flocale.h:
	* libs/PictureBase.h:
	* fvwm/menuitem.c:
	* fvwm/geometry.c:
	* fvwm/colorset.c:
	renamed colorset_struct to colorset_t

2002-10-22  olicha  <olivier.chapuis@free.fr>

	* libs/PictureUtils.c:
	Minor fixes and add #if O experimental code

2002-10-22  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/icons.c (DrawIconPixmapWindow):
	(DrawIconWindow):
	* fvwm/events.c (HandlePropertyNotify):
	* libs/Fft.c (FftDrawString):
	* libs/Colorset.c (DumpColorset):
	(LoadColorset):
	* libs/PictureGraphics.c (PGraphicsRenderPixmaps):
	use renamed colorset_struct members

	* libs/Colorset.h (colorset_struct):
	renamed and re-sorted members and cut down bit field lengths for
	percentile members

	* fvwm/menustyle.c (menustyle_update):
	fixed core dump

	* fvwm/stack.c (restack_windows):
	fixed flickering when raising transients; can't prevent flickering when
	lowering a window completely
	(restack_windows):
	fixed unnecessary error message

	* fvwm/fvwm.c (main):
	init Scr to zeros

	* fvwm/stack.c (__restack_window):
	fixed a stacking problem with icons

	* fvwm/add_window.c (destroy_icon):
	fixed a memory leak

2002-10-21  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menuitem.c (menuitem_paint):
	* fvwm/menustyle.c (menustyle_parse_style):
	* fvwm/menus.c (paint_side_pic):
	(paint_menu):
	(select_menu_item):
	(repaint_transparent_menu):
	* fvwm/menustyle.h (MenuLook):
	cleaned up menu drawing code, fixed last patch

	* fvwm/menuitem.c (menuitem_paint):
	* fvwm/menustyle.c (menustyle_parse_style):
	fixed HilightBack default

	* fvwm/bindings.c (binding_cmd):
	(bind_get_bound_button_contexts):
	(ParseBinding):
	* fvwm/screen.h (ScreenInfo):
	fixed mouse bindings with buttons > 5

	* fvwm/menuitem.c (menuitem_paint):
	* fvwm/menustyle.c (menustyle_parse_style):
	(menustyle_parse_style):
	(CMD_CopyMenuStyle):
	(menustyle_update):
	(menustyle_free):