@@ -489,7 +489,15 @@ static void restack_windows(
 		}
 	}
 
-	changes.sibling = FW_W_FRAME(r);
+	if (IS_ICONIFIED(r))
+	{
+		changes.sibling = (FW_W_ICON_PIXMAP(r) != None) ?
+			FW_W_ICON_PIXMAP(r) : FW_W_ICON_TITLE(r);
+	}
+	else
+	{
+		changes.sibling = FW_W_FRAME(r);
+	}
 	if (changes.sibling == None)
 	{
 		changes.stack_mode = (do_lower) ? Below : Above;
@@ -501,7 +509,10 @@ static void restack_windows(
 		flags = CWStackMode | CWSibling;
 	}
 	XConfigureWindow(dpy, FW_W_FRAME(r->stack_next), flags, &changes);
-	XRestackWindows(dpy, wins, count);
+	if (count > 1)
+	{
+		XRestackWindows(dpy, wins, count);
+	}
 	free(wins);
 	EWMH_SetClientListStacking();
 	if (do_broadcast_all)
@@ -1276,11 +1287,11 @@ void mark_transient_subtree(
 			{
 				continue;
 			}
-			r = (FvwmWindow *)s->scratch.p;
-			if (do_ignore_icons && r && IS_ICONIFIED(r))
+			if (do_ignore_icons && IS_ICONIFIED(s))
 			{
 				continue;
 			}
+			r = (FvwmWindow *)s->scratch.p;
 			if (IS_TRANSIENT(s))
 			{
 				if (r && IS_IN_TRANSIENT_SUBTREE(r) &&
