@@ -1,3 +1,11 @@
+2002-10-23  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/stack.c (mark_transient_subtree):
+	fixed stack ring corruption with iconified transients
+	(restack_windows):
+	fixed a problem with lowering windows below the icons of their
+	transients
+
 2002-10-22  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* libs/Colorset.c:
